--- a/TripAdvisorApplication/test-output/old/Functional Testing/methods.html
+++ b/TripAdvisorApplication/test-output/old/Functional Testing/methods.html
@@ -1,6 +1,42 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Functional Testing</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f660a8">  <td>21/02/21 14:20:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="test.driverConfig()[pri:0, instance:TestScenarios.test@2b6faea6]">driverConfig</td> 
-  <td>main@1998767043</td>   <td></td> </tr>
+<tr bgcolor="ca61a2">  <td>21/02/23 20:19:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TripAdvisorTestScenarios.driverConfig()[pri:0, instance:testScenarios.TripAdvisorTestScenarios@7ce3cb8e]">&gt;&gt;driverConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td>  <td>main@1666607455</td>   <td></td> </tr>
+<tr bgcolor="ca61a2">  <td>21/02/23 20:19:43</td>   <td>19695</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TripAdvisorTestScenarios.readData()[pri:0, instance:testScenarios.TripAdvisorTestScenarios@7ce3cb8e]">readData</td> 
+  <td>main@1666607455</td>   <td></td> </tr>
+<tr bgcolor="ca61a2">  <td>21/02/23 20:19:45</td>   <td>21225</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TripAdvisorTestScenarios.selectDestination()[pri:1, instance:testScenarios.TripAdvisorTestScenarios@7ce3cb8e]">selectDestination</td> 
+  <td>main@1666607455</td>   <td></td> </tr>
+<tr bgcolor="ca61a2">  <td>21/02/23 20:20:11</td>   <td>47642</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TripAdvisorTestScenarios.checkInDate()[pri:2, instance:testScenarios.TripAdvisorTestScenarios@7ce3cb8e]">checkInDate</td> 
+  <td>main@1666607455</td>   <td></td> </tr>
+<tr bgcolor="ca61a2">  <td>21/02/23 20:20:14</td>   <td>49930</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TripAdvisorTestScenarios.checkOutDate()[pri:3, instance:testScenarios.TripAdvisorTestScenarios@7ce3cb8e]">checkOutDate</td> 
+  <td>main@1666607455</td>   <td></td> </tr>
+<tr bgcolor="ca61a2">  <td>21/02/23 20:20:14</td>   <td>50521</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TripAdvisorTestScenarios.setGuest()[pri:4, instance:testScenarios.TripAdvisorTestScenarios@7ce3cb8e]">setGuest</td> 
+  <td>main@1666607455</td>   <td></td> </tr>
+<tr bgcolor="ca61a2">  <td>21/02/23 20:20:15</td>   <td>51321</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TripAdvisorTestScenarios.sortBy()[pri:5, instance:testScenarios.TripAdvisorTestScenarios@13e39c73]">sortBy</td> 
+  <td>main@1666607455</td>   <td></td> </tr>
+<tr bgcolor="ca61a2">  <td>21/02/23 20:20:27</td>   <td>63470</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TripAdvisorTestScenarios.liftAccess()[pri:6, instance:testScenarios.TripAdvisorTestScenarios@13e39c73]">liftAccess</td> 
+  <td>main@1666607455</td>   <td></td> </tr>
+<tr bgcolor="ca61a2">  <td>21/02/23 20:20:28</td>   <td>64144</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TripAdvisorTestScenarios.hotelNames()[pri:7, instance:testScenarios.TripAdvisorTestScenarios@13e39c73]">hotelNames</td> 
+  <td>main@1666607455</td>   <td></td> </tr>
+<tr bgcolor="ca61a2">  <td>21/02/23 20:20:33</td>   <td>69283</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TripAdvisorTestScenarios.totalPrice()[pri:8, instance:testScenarios.TripAdvisorTestScenarios@13e39c73]">totalPrice</td> 
+  <td>main@1666607455</td>   <td></td> </tr>
+<tr bgcolor="ca61a2">  <td>21/02/23 20:20:33</td>   <td>69458</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TripAdvisorTestScenarios.pricePerNight()[pri:9, instance:testScenarios.TripAdvisorTestScenarios@13e39c73]">pricePerNight</td> 
+  <td>main@1666607455</td>   <td></td> </tr>
+<tr bgcolor="ca61a2">  <td>21/02/23 20:20:33</td>   <td>69620</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TripAdvisorTestScenarios.cruises()[pri:10, instance:testScenarios.TripAdvisorTestScenarios@63355449]">cruises</td> 
+  <td>main@1666607455</td>   <td></td> </tr>
+<tr bgcolor="ca61a2">  <td>21/02/23 20:20:40</td>   <td>76525</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TripAdvisorTestScenarios.cruiseLine()[pri:11, instance:testScenarios.TripAdvisorTestScenarios@63355449]">cruiseLine</td> 
+  <td>main@1666607455</td>   <td></td> </tr>
+<tr bgcolor="ca61a2">  <td>21/02/23 20:20:45</td>   <td>81073</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TripAdvisorTestScenarios.cruiseShip()[pri:12, instance:testScenarios.TripAdvisorTestScenarios@63355449]">cruiseShip</td> 
+  <td>main@1666607455</td>   <td></td> </tr>
+<tr bgcolor="ca61a2">  <td>21/02/23 20:20:49</td>   <td>84845</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TripAdvisorTestScenarios.changeWindow()[pri:13, instance:testScenarios.TripAdvisorTestScenarios@63355449]">changeWindow</td> 
+  <td>main@1666607455</td>   <td></td> </tr>
+<tr bgcolor="ca61a2">  <td>21/02/23 20:20:56</td>   <td>92195</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TripAdvisorTestScenarios.PassengerCrewValue()[pri:14, instance:testScenarios.TripAdvisorTestScenarios@30ee2816]">PassengerCrewValue</td> 
+  <td>main@1666607455</td>   <td></td> </tr>
+<tr bgcolor="ca61a2">  <td>21/02/23 20:20:56</td>   <td>92246</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TripAdvisorTestScenarios.launchedYearValue()[pri:15, instance:testScenarios.TripAdvisorTestScenarios@30ee2816]">launchedYearValue</td> 
+  <td>main@1666607455</td>   <td></td> </tr>
+<tr bgcolor="ca61a2">  <td>21/02/23 20:20:56</td>   <td>92323</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TripAdvisorTestScenarios.languageValue()[pri:16, instance:testScenarios.TripAdvisorTestScenarios@30ee2816]">languageValue</td> 
+  <td>main@1666607455</td>   <td></td> </tr>
+<tr bgcolor="ca61a2">  <td>21/02/23 20:20:56</td>   <td>92405</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TripAdvisorTestScenarios.closeBrowser()[pri:0, instance:testScenarios.TripAdvisorTestScenarios@30ee2816]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td>  <td>main@1666607455</td>   <td></td> </tr>
 </table>
