--- a/TripAdvisorApplication/test-output/old/Default suite/classes.html
+++ b/TripAdvisorApplication/test-output/old/Default suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>TestScenarios.test</td>
+<td>testScenarios.TripAdvisorTestScenarios</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
@@ -12,55 +12,88 @@
 <tr>
 <td>&nbsp;</td>
 <td>cruiseLine</td>
-<td>&nbsp;</td></tr>
+<td>Smoke Test Two </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>readData</td>
+<td>Smoke Test One </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>totalPrice</td>
+<td>Regression Test One </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>PassengerCrewValue</td>
-<td>&nbsp;</td></tr>
+<td>Regression Test Two </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>liftAccess</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>checkInDate</td>
-<td>&nbsp;</td></tr>
+<td>Regression Test One </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>cruises</td>
-<td>&nbsp;</td></tr>
+<td>Smoke Test Two </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>checkInDate</td>
+<td>Smoke Test One </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>hotelNames</td>
+<td>Regression Test One </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>checkOutDate</td>
-<td>&nbsp;</td></tr>
+<td>Smoke Test One </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>selectDestination</td>
-<td>&nbsp;</td></tr>
+<td>Smoke Test One </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>changeWindow</td>
-<td>&nbsp;</td></tr>
+<td>Smoke Test Two </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>launchedYearValue</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>cruiseShip</td>
-<td>&nbsp;</td></tr>
+<td>Regression Test Two </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>sortBy</td>
-<td>&nbsp;</td></tr>
+<td>Regression Test One </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>cruiseShip</td>
+<td>Smoke Test Two </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>setGuest</td>
-<td>&nbsp;</td></tr>
+<td>Smoke Test One </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>languageValue</td>
-<td>&nbsp;</td></tr>
+<td>Regression Test Two </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>pricePerNight</td>
+<td>Regression Test One </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
