--- a/TripAdvisorApplication/test-output/old/Default suite/methods.html
+++ b/TripAdvisorApplication/test-output/old/Default suite/methods.html
@@ -1,32 +1,38 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f660a8">  <td>21/02/22 16:54:21</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;test.driverConfig()[pri:0, instance:TestScenarios.test@4690b489]">&gt;&gt;driverConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@558216562</td>   <td></td> </tr>
-<tr bgcolor="f660a8">  <td>21/02/22 16:54:41</td>   <td>19928</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="test.selectDestination()[pri:1, instance:TestScenarios.test@4690b489]">selectDestination</td> 
-  <td>main@558216562</td>   <td></td> </tr>
-<tr bgcolor="f660a8">  <td>21/02/22 16:55:01</td>   <td>39547</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="test.checkInDate()[pri:2, instance:TestScenarios.test@4690b489]">checkInDate</td> 
-  <td>main@558216562</td>   <td></td> </tr>
-<tr bgcolor="f660a8">  <td>21/02/22 16:55:08</td>   <td>46543</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="test.checkOutDate()[pri:3, instance:TestScenarios.test@4690b489]">checkOutDate</td> 
-  <td>main@558216562</td>   <td></td> </tr>
-<tr bgcolor="f660a8">  <td>21/02/22 16:55:08</td>   <td>47041</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="test.setGuest()[pri:4, instance:TestScenarios.test@4690b489]">setGuest</td> 
-  <td>main@558216562</td>   <td></td> </tr>
-<tr bgcolor="f660a8">  <td>21/02/22 16:55:10</td>   <td>48512</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="test.sortBy()[pri:5, instance:TestScenarios.test@4690b489]">sortBy</td> 
-  <td>main@558216562</td>   <td></td> </tr>
-<tr bgcolor="f660a8">  <td>21/02/22 16:55:13</td>   <td>51782</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="test.liftAccess()[pri:6, instance:TestScenarios.test@4690b489]">liftAccess</td> 
-  <td>main@558216562</td>   <td></td> </tr>
-<tr bgcolor="f660a8">  <td>21/02/22 16:55:15</td>   <td>53188</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="test.cruises()[pri:7, instance:TestScenarios.test@4690b489]">cruises</td> 
-  <td>main@558216562</td>   <td></td> </tr>
-<tr bgcolor="f660a8">  <td>21/02/22 16:55:31</td>   <td>69857</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="test.cruiseLine()[pri:8, instance:TestScenarios.test@4690b489]">cruiseLine</td> 
-  <td>main@558216562</td>   <td></td> </tr>
-<tr bgcolor="f660a8">  <td>21/02/22 16:55:36</td>   <td>74556</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="test.cruiseShip()[pri:9, instance:TestScenarios.test@4690b489]">cruiseShip</td> 
-  <td>main@558216562</td>   <td></td> </tr>
-<tr bgcolor="f660a8">  <td>21/02/22 16:55:40</td>   <td>78516</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="test.changeWindow()[pri:10, instance:TestScenarios.test@4690b489]">changeWindow</td> 
-  <td>main@558216562</td>   <td></td> </tr>
-<tr bgcolor="f660a8">  <td>21/02/22 16:55:55</td>   <td>93198</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="test.PassengerCrewValue()[pri:11, instance:TestScenarios.test@4690b489]">PassengerCrewValue</td> 
-  <td>main@558216562</td>   <td></td> </tr>
-<tr bgcolor="f660a8">  <td>21/02/22 16:55:55</td>   <td>93242</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="test.launchedYearValue()[pri:12, instance:TestScenarios.test@4690b489]">launchedYearValue</td> 
-  <td>main@558216562</td>   <td></td> </tr>
-<tr bgcolor="f660a8">  <td>21/02/22 16:55:55</td>   <td>93295</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="test.languageValue()[pri:13, instance:TestScenarios.test@4690b489]">languageValue</td> 
-  <td>main@558216562</td>   <td></td> </tr>
+<tr bgcolor="80d585">  <td>21/02/24 18:24:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TripAdvisorTestScenarios.readData()[pri:0, instance:testScenarios.TripAdvisorTestScenarios@62230c58]">readData</td> 
+  <td>main@1223850219</td>   <td></td> </tr>
+<tr bgcolor="80d585">  <td>21/02/24 18:24:58</td>   <td>3307</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TripAdvisorTestScenarios.selectDestination()[pri:1, instance:testScenarios.TripAdvisorTestScenarios@62230c58]">selectDestination</td> 
+  <td>main@1223850219</td>   <td></td> </tr>
+<tr bgcolor="80d585">  <td>21/02/24 18:24:58</td>   <td>3344</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TripAdvisorTestScenarios.checkInDate()[pri:2, instance:testScenarios.TripAdvisorTestScenarios@62230c58]">checkInDate</td> 
+  <td>main@1223850219</td>   <td></td> </tr>
+<tr bgcolor="80d585">  <td>21/02/24 18:24:58</td>   <td>3351</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TripAdvisorTestScenarios.checkOutDate()[pri:3, instance:testScenarios.TripAdvisorTestScenarios@62230c58]">checkOutDate</td> 
+  <td>main@1223850219</td>   <td></td> </tr>
+<tr bgcolor="80d585">  <td>21/02/24 18:24:58</td>   <td>3362</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TripAdvisorTestScenarios.setGuest()[pri:4, instance:testScenarios.TripAdvisorTestScenarios@62230c58]">setGuest</td> 
+  <td>main@1223850219</td>   <td></td> </tr>
+<tr bgcolor="80d585">  <td>21/02/24 18:24:58</td>   <td>3371</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TripAdvisorTestScenarios.sortBy()[pri:5, instance:testScenarios.TripAdvisorTestScenarios@62230c58]">sortBy</td> 
+  <td>main@1223850219</td>   <td></td> </tr>
+<tr bgcolor="80d585">  <td>21/02/24 18:24:58</td>   <td>3392</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TripAdvisorTestScenarios.liftAccess()[pri:6, instance:testScenarios.TripAdvisorTestScenarios@62230c58]">liftAccess</td> 
+  <td>main@1223850219</td>   <td></td> </tr>
+<tr bgcolor="80d585">  <td>21/02/24 18:24:58</td>   <td>3403</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TripAdvisorTestScenarios.hotelNames()[pri:7, instance:testScenarios.TripAdvisorTestScenarios@62230c58]">hotelNames</td> 
+  <td>main@1223850219</td>   <td></td> </tr>
+<tr bgcolor="80d585">  <td>21/02/24 18:24:58</td>   <td>3408</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TripAdvisorTestScenarios.totalPrice()[pri:8, instance:testScenarios.TripAdvisorTestScenarios@62230c58]">totalPrice</td> 
+  <td>main@1223850219</td>   <td></td> </tr>
+<tr bgcolor="80d585">  <td>21/02/24 18:24:58</td>   <td>3433</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TripAdvisorTestScenarios.pricePerNight()[pri:9, instance:testScenarios.TripAdvisorTestScenarios@62230c58]">pricePerNight</td> 
+  <td>main@1223850219</td>   <td></td> </tr>
+<tr bgcolor="80d585">  <td>21/02/24 18:24:58</td>   <td>3438</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TripAdvisorTestScenarios.cruises()[pri:10, instance:testScenarios.TripAdvisorTestScenarios@62230c58]">cruises</td> 
+  <td>main@1223850219</td>   <td></td> </tr>
+<tr bgcolor="80d585">  <td>21/02/24 18:24:58</td>   <td>3445</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TripAdvisorTestScenarios.cruiseLine()[pri:11, instance:testScenarios.TripAdvisorTestScenarios@62230c58]">cruiseLine</td> 
+  <td>main@1223850219</td>   <td></td> </tr>
+<tr bgcolor="80d585">  <td>21/02/24 18:24:58</td>   <td>3452</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TripAdvisorTestScenarios.cruiseShip()[pri:12, instance:testScenarios.TripAdvisorTestScenarios@62230c58]">cruiseShip</td> 
+  <td>main@1223850219</td>   <td></td> </tr>
+<tr bgcolor="80d585">  <td>21/02/24 18:24:58</td>   <td>3457</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TripAdvisorTestScenarios.changeWindow()[pri:13, instance:testScenarios.TripAdvisorTestScenarios@62230c58]">changeWindow</td> 
+  <td>main@1223850219</td>   <td></td> </tr>
+<tr bgcolor="80d585">  <td>21/02/24 18:24:58</td>   <td>3463</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TripAdvisorTestScenarios.PassengerCrewValue()[pri:14, instance:testScenarios.TripAdvisorTestScenarios@62230c58]">PassengerCrewValue</td> 
+  <td>main@1223850219</td>   <td></td> </tr>
+<tr bgcolor="80d585">  <td>21/02/24 18:24:58</td>   <td>3467</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TripAdvisorTestScenarios.launchedYearValue()[pri:15, instance:testScenarios.TripAdvisorTestScenarios@62230c58]">launchedYearValue</td> 
+  <td>main@1223850219</td>   <td></td> </tr>
+<tr bgcolor="80d585">  <td>21/02/24 18:24:58</td>   <td>3473</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TripAdvisorTestScenarios.languageValue()[pri:16, instance:testScenarios.TripAdvisorTestScenarios@62230c58]">languageValue</td> 
+  <td>main@1223850219</td>   <td></td> </tr>
 </table>
